[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
name = "uuid-b64"
description = "Base64 encoding for UUIDs"
version = "0.2.0"
license = "Apache-2.0/MIT"
readme = "README.md"
categories = ["encoding", "value-formatting"]
repository = "https://github.com/quodlibetor/uuid-b64"
edition = "2021"

[badges]
travis-ci = { repository = "quodlibetor/uuid-b64", branch = "master" }

[dependencies]
base64 = "0.22.1"
diesel-derive-newtype = { version = "2.1.2", optional = true }
diesel = { version = "2.2.10", features = ["postgres", "uuid"], optional = true }
error-chain = "0.12.4"
inlinable_string = { version = "0.1.15", default-features = false }
serde = { version = "1.0.219", optional = true }
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.8.5", default-features = false, optional = true }

[features]
default = []
serde = ["dep:serde", "inlinable_string/serde"]
diesel-uuid = ["dep:diesel-derive-newtype", "dep:diesel"]
diesel = ["diesel-uuid"]
sqlx_sqlite = ["dep:sqlx", "sqlx/sqlite"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "2.2", features = ["postgres", "uuid"] }
